--- a/calendar_ai_agent_web_app/backend/requirements.txt
+++ b/calendar_ai_agent_web_app/backend/requirements.txt
@@ -7,3 +7,9 @@ google-api-python-client>=2.0.0
 google-auth-httplib2>=0.1.0
 google-auth-oauthlib>=0.4.0
 google-auth>=2.0.0
+crewai
+langchain-openai
+langchain
+langchain-community
+langchain-anthropic
+langgraph
