Add: tailwind.output.css to gitignore

--- a/calendar_ai_agent_web_app/.gitignore
+++ b/calendar_ai_agent_web_app/.gitignore
@@ -6,6 +6,7 @@ credentials.json
 # Node.js
 frontend/node_modules/
 frontend/.cache/
+frontend/src/tailwind.output.css
 
 # Python build
 __pycache__/
