--- a/calendar_ai_agent_web_app/frontend/package.json
+++ b/calendar_ai_agent_web_app/frontend/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@tailwindcss/cli": "^4.1.11",
     "axios": "^1.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^4.1.11"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^0.1.0",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.31"
   },
   "scripts": {
     "start": "react-scripts start",
