--- a/calendar_ai_agent_web_app/frontend/package.json
+++ b/calendar_ai_agent_web_app/frontend/package.json
@@ -7,11 +7,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.31"
+    "postcss": "^8.4.31",
+    "autoprefixer": "^10.4.15"
   },
   "scripts": {
     "start": "react-scripts start",
