--- a/calendar_ai_agent_web_app/frontend/package.json
+++ b/calendar_ai_agent_web_app/frontend/package.json
@@ -6,12 +6,12 @@
     "axios": "^1.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "tailwindcss": "^3.4.3"
+    "react-scripts": "5.0.1"
   },
   "devDependencies": {
-    "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.15"
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
